# desc_visualizer

./: .cursorrules  .gitignore  CMakeLists.txt  README.md  build_vs.bat  imgui.ini
data/: example_class_diagram.json  example_diagram.json
docs/: ARCHITECTURE.md
src/apps/main/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/animation/: CMakeLists.txt
src/libs/animation/include/animation/: rect_animator.hpp
src/libs/animation/src/: rect_animator.cpp
src/libs/canvas/: CMakeLists.txt
src/libs/canvas/include/canvas/: canvas.hpp
src/libs/canvas/src/: canvas.cpp
src/libs/diagram_loaders/: CMakeLists.txt
src/libs/diagram_loaders/include/diagram_loaders/: debug_class_diagram.hpp  json_loader.hpp
src/libs/diagram_loaders/src/: class_diagram_json_loader.cpp  debug_class_diagram.cpp  json_loader.cpp
src/libs/diagram_model/: CMakeLists.txt
src/libs/diagram_model/include/diagram_model/: class_diagram.hpp  types.hpp
src/libs/diagram_placement/: CMakeLists.txt
src/libs/diagram_placement/include/diagram_placement/: class_diagram_layout_constants.hpp  class_diagram_placement.hpp  connection_lines.hpp  physics_layout.hpp  placer.hpp  types.hpp
src/libs/diagram_placement/src/: class_diagram_placer.cpp  connection_lines.cpp  physics_layout.cpp  placer.cpp
src/libs/diagram_render/: CMakeLists.txt
src/libs/diagram_render/include/diagram_render/: nested_hit_button.hpp  renderer.hpp
src/libs/diagram_render/src/: class_diagram_layout.cpp  class_diagram_renderer.cpp  renderer.cpp
src/tests/: CMakeLists.txt
